在登入前可以改密碼，避免已強迫使用者改密碼的情況下，無法先登入再改密碼。

--- a/fon9/web/ma/fon9ma.html
+++ b/fon9/web/ma/fon9ma.html
@@ -51,6 +51,9 @@
   <button class="fon9-btn fon9-btn-signon" id="btnShowSignonDlg" autofocus>登入</button>
   <button class="fon9-btn fon9-btn-signon" id="btnUserProfile" style="display:none"></button>
  </div>
+ <div style="float:right; margin-right:3px">
+  <button class="fon9-btn fon9-btn-signon" id="btnChangePass">改密碼</button>
+ </div>
 </nav>
 <div class="fon9-content">
  <iframe id="seedFrame" src="./fon9seed.html"
@@ -268,7 +271,6 @@ document.getElementById('seedFrame').addEventListener("load", function() {
 </style>
 <div id="formUserProfile" class="fon9-fullWindowMask">
  <div id="divUserProfile">
-  <button id="btnChangePass" class="fon9-btn" style="width:100%">改密碼</button><br>
   <button id="btnSignout" class="fon9-btn" style="width:100%">登出</button><br>
  </div>
 </div>
