html: 使用 "?" 查詢 seed cmd, 若 item 為 "-" 則在 ContextMenu 顯示分隔線.

--- a/fon9/web/ma/fon9seed.html
+++ b/fon9/web/ma/fon9seed.html
@@ -877,6 +877,10 @@
             return;
          }
          for (let i = 1; i < cmds.length; ++i) {
+            if (cmds[i] == "-") {
+               divSeedMenuItems.appendChild(document.createElement('hr'));
+               continue;
+            }
             let cmd = cmds[i].split('\x01');
             if (cmd.length >= 3) // cmd + DisplayText + Prompt(for input text)
                cmd[1] += '\u2026'; // "..."
